fix: wrong text alignment in the footer

--- a/src/app/components/footer/footer.styles.scss
+++ b/src/app/components/footer/footer.styles.scss
@@ -64,7 +64,7 @@
 
   @media (min-width: 768px) {
     align-items: start;
-    justify-content: baseline;
+    justify-content: start;
     gap: 0.5vw;
     padding-top: 7vw;
     width: 33%;
